fixes navbar collapse and a few things with sidenav media query

--- a/assets/css/partials/components/editProfile/_edit-profile.scss
+++ b/assets/css/partials/components/editProfile/_edit-profile.scss
@@ -4,7 +4,7 @@
     margin-bottom: 20px;
   }
 
-  hr {
+  .header-hr {
     border: 1px solid #ddd;
     margin: 0 0 20px 0;
     padding: 0;
@@ -270,7 +270,7 @@
       text-align: center;
     }
 
-    hr {
+    .header-hr {
       display: none;
     }
   }
@@ -305,7 +305,7 @@
       text-align: center;
     }
 
-    hr {
+    .header-hr {
       display: none;
     }
   }
